Details on spoofcheck

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 parselnk.py - Parse windows .lnk files and get various bits of info from them. 
+spoofcheck.py - Test for ARP spoofing on OS X using the `arp` command.
