--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 parselnk.py - Parse windows .lnk files and get various bits of info from them. 
 spoofcheck.py - Test for ARP spoofing on OS X using the `arp` command.
-arp_macresolve.py - Resolve MAC addresses to manufacturer names using the nmap listings
+arp_macresolve.py - Resolve MAC addresses from an ARP table listing to manufacturer names using the nmap listings
